# rustcraft-dashboard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  buildarm.sh  buildlinux.sh  data.db  test.sh
src/: console.rs  database.rs  instance.rs  main.rs
src/static/: index.css
src/templates/: index.html.tera
static/css/: index.css  register.css  setup.css
static/js/: index.js  properties.js  register.js  setup.js
templates/: 404.html.tera  index.html.tera  properties.html.tera  regi.html.tera  setup.html.tera
